--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -1,11 +1,22 @@
 name: Sample
-
-runs-on:
-  push:
-
+on: [push]
 jobs:
-  sample:
-    runs_on: ubuntu-latest
+  command:
+    name: Use Linux Commands
+    runs-on: ubuntu-latest
     steps:
-      - name: exec date
-        run: date
+      - name: Show ubuntu details
+        run: lsb_release -a
+      - name: Inspect files before checkout
+        run: ls -la
+      - name: show current directory before checkout
+        run: pwd
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Inspect files after checkout
+        run: ls -la
+      - name: show current directory after checkout
+        run: pwd
+      - name: show all branches after checkout
+        run: git branch -a
+
